Removed the optional (disabled by default) feature of the traffic light detection to help with data collection.