@@ -23,6 +23,9 @@ title: Version 1.11 > Minor
 This changelog will contain all changes from 1.11.0 onwards before the next major version.
 !!!
 
+==- Version 1.11.79
+Added a check of the ultralytics package version to automatically update because a crypto miner was found in certain versions of the ultralytics package!
+[!badge variant="dark" text="Glas42"] [!badge variant="ghost" text="Backend"]
 ==- Version 1.11.78
 Removed the optional (disabled by default) feature of the traffic light detection to help with data collection.
 [!badge variant="dark" text="Glas42"] [!badge variant="ghost" text="TrafficLightDetection"]
